<resources>
    <string name="app_name">ImageNow</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_location">Location</string>
    <string name="action_location_short">Location</string>
    <string name="prompt_activity">Activity</string>
    <string name="action_activity_short">Activity</string>
    <string name="action_report">Report</string>
    <string name="title_activity_items">Activities</string>
    <string name="action_activities">Activities</string>
    <string name="title_activity_report">Report Activity</string>
</resources>
