<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ReportActivity"
    tools:showIn="@layout/activity_report">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:scaleType="center"
            android:src="@drawable/ic_report" />

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/input_field"
            android:drawableLeft="@drawable/ic_location_blue"
            android:drawablePadding="14dp"
            android:hint="@string/prompt_location"
            android:imeActionId="@+id/activity"
            android:layout_marginTop="10dp"
            android:imeActionLabel="@string/action_location_short"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="5dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_field"
            android:drawableLeft="@drawable/ic_activity_blue"
            android:drawablePadding="10dp"
            android:hint="@string/prompt_activity"
            android:imeActionId="@+id/activity"
            android:imeActionLabel="@string/action_activity_short"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="5dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/activity_report_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn"
            android:layout_marginTop="30dp"
            android:text="@string/action_report"
            android:textColor="#FF0000"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>