<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/ic_sign_in"
            android:layout_marginBottom="10dp"
            android:scaleType="center"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/loginId"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/input_field"
            android:drawableLeft="@drawable/ic_user_green"
            android:drawablePadding="10dp"
            android:hint="@string/prompt_email"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_field"
            android:drawableLeft="@drawable/ic_key_green"
            android:drawablePadding="14dp"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="9dp"
            android:paddingRight="5dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn"
            android:text="@string/action_sign_in"
            android:textColor="#FF0000"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
